--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página de Vendas</h1>  
+    <p>Vemdas =R$ 5000,00 </R1></p>
     <a href="index.html">Ir para a pagina initial</a>
 </body>
 </html>
